[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/RoomChanger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.4711, 43.0878 )

[node name="RoomChanger" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="TimerDontDetect" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
__meta__ = {
"_editor_description_": "evitar detectar al jugador inmediatamente al cargar escenario"
}

[node name="PositionSpawn" type="Position2D" parent="."]
position = Vector2( 48, 0 )
__meta__ = {
"_gizmo_extents_": 30.0
}

[node name="TimerRetryChangeRoom" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_RoomChanger_body_entered"]
[connection signal="timeout" from="TimerRetryChangeRoom" to="." method="_on_TimerRetryChangeRoom_timeout"]
